--- a/src/components/patient-form/patient-form.scss
+++ b/src/components/patient-form/patient-form.scss
@@ -1,3 +1,8 @@
 patient-form {
-
+    .contact-details ion-icon{
+        top: 50%;
+        margin-top: -14px;
+        position: absolute;
+        right: 5px;
+    }
 }
