--- a/src/components/add-queue-form-modal/add-queue-form-modal.html
+++ b/src/components/add-queue-form-modal/add-queue-form-modal.html
@@ -14,7 +14,7 @@
 <ion-content padding>
 	<form [formGroup]="queueForm" #form="ngForm" (ngSubmit)="save()">
 		<ion-grid>
-			<ion-row>
+			<!-- <ion-row>
 				<ion-col col-12 col-sm-6 col-md-6>
 					<div class="form-group">
 						<ion-label class="form-label">Last Name*</ion-label>
@@ -45,7 +45,12 @@
 						</ion-item>
 					</div>
 				</ion-col>
-			</ion-row>
+			</ion-row> -->
+			<ion-card>
+				<ion-card-header>
+					{{lastName}}, {{firstName}} {{middleName}}
+				</ion-card-header>
+			</ion-card>
 			<ion-row>
 				<ion-col col-12 col-sm-12 col-md-12>
 					<ion-list radio-group class="form-group" formControlName="isServeNow">
