changed submit button labels to done

--- a/src/components/patient-form/patient-form.html
+++ b/src/components/patient-form/patient-form.html
@@ -142,7 +142,7 @@
 
     <div text-center>
         <xhr-button #xhr round large color="accent" type="submit" [disabled]="patientForm.pristine || form.pristine" (xhrClick)="submitForm($event)">
-            Submit
+            Done
         </xhr-button>
     </div>
 </form>
