--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -148,7 +148,7 @@
         </div>
         <div text-center>
             <xhr-button #xhr round large color="accent" type="submit" [disabled]="profileForm.pristine || form.pristine" (xhrClick)="submitForm($event)">
-                Submit
+                Done
             </xhr-button>
         </div>
     </form>
