put emphasize on form labels

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -343,9 +343,11 @@ ion-content {
 form {
     .form-label {
         font-weight: bold;
+        font-size: $h3;
     }
     .form-link {
         font-weight: bold;
+        font-size: $h3;
     }
     .contact-control {
         ion-col {
