--- a/src/components/account-creation-modal/account-creation-modal.html
+++ b/src/components/account-creation-modal/account-creation-modal.html
@@ -17,7 +17,7 @@
             <ion-grid>
                 <ion-row>
                     <ion-col col-12 col-sm-12 col-md-12>
-                        <ion-label class="form-label">Email *</ion-label>
+                        <ion-label class="form-label">Email* :</ion-label>
                         <ion-item round>
                             <ion-input name="email" formControlName="email"></ion-input>
                         </ion-item>
