--- a/src/components/add-queue-form-modal/add-queue-form-modal.html
+++ b/src/components/add-queue-form-modal/add-queue-form-modal.html
@@ -17,7 +17,7 @@
 			<ion-row>
 				<ion-col col-12 col-sm-6 col-md-6>
 					<div class="form-group">
-						<ion-label class="form-label">Last Name*</ion-label>
+						<ion-label class="form-label">Last Name* :</ion-label>
 						<ion-item round>
 							<ion-input name="lastName" formControlName="lastName"></ion-input>
 						</ion-item>
@@ -28,7 +28,7 @@
 				</ion-col>
 				<ion-col col-12 col-sm-6 col-md-6>
 					<div class="form-group">
-						<ion-label class="form-label">First Name*</ion-label>
+						<ion-label class="form-label">First Name* : </ion-label>
 						<ion-item round>
 							<ion-input name="firstName" formControlName="firstName"></ion-input>
 						</ion-item>
@@ -39,7 +39,7 @@
 				</ion-col>
 				<ion-col col-12 col-sm-6 col-md-6>
 					<div class="form-group">
-						<ion-label class="form-label">Middle Name</ion-label>
+						<ion-label class="form-label">Middle Name : </ion-label>
 						<ion-item round>
 							<ion-input name="middleName" formControlName="middleName"></ion-input>
 						</ion-item>
@@ -49,30 +49,28 @@
 			<ion-row>
 				<ion-col col-12 col-sm-12 col-md-12>
 					<ion-list radio-group class="form-group" formControlName="isServeNow">
-					  <ion-item>
-					    <ion-label>Queue Now</ion-label>
-					    <ion-radio class="form-control" [value]="true" checked></ion-radio>
-					  </ion-item>
-					  <ion-item>
-					    <ion-label>Scheduled</ion-label>
-					    <ion-radio class="form-control" [value]="false"></ion-radio>
-					  </ion-item>
+						<ion-item>
+							<ion-label>Queue Now</ion-label>
+							<ion-radio class="form-control" [value]="true" checked></ion-radio>
+						</ion-item>
+						<ion-item>
+							<ion-label>Scheduled</ion-label>
+							<ion-radio class="form-control" [value]="false"></ion-radio>
+						</ion-item>
 					</ion-list>
 				</ion-col>
 			</ion-row>
 			<ion-row>
 				<ion-col col-12 col-sm-6 col-md-6>
 					<div class="form-group">
-						<ion-label>Date</ion-label>
-						<ion-datetime displayFormat="MMMM DD YYYY" formControlName="schedule" [disabled]="isServeNow.value"
-						[min]="getMinDate()"
-						>
+						<ion-label>Date :</ion-label>
+						<ion-datetime displayFormat="MMMM DD YYYY" formControlName="schedule" [disabled]="isServeNow.value" [min]="getMinDate()">
 						</ion-datetime>
 					</div>
 				</ion-col>
 				<ion-col col-12 col-sm-6 col-md-6>
 					<div class="form-group">
-						<ion-label>Time</ion-label>
+						<ion-label>Time :</ion-label>
 						<ion-datetime pickerFormat="hh:mm A" formControlName="timeSlot" [disabled]="isServeNow.value">
 						</ion-datetime>
 					</div>
