--- a/src/components/forgot-password-modal/forgot-password-modal.html
+++ b/src/components/forgot-password-modal/forgot-password-modal.html
@@ -17,7 +17,7 @@
             <ion-grid>
                 <ion-row>
                     <ion-col col-12 col-sm-12 col-md-12>
-                        <ion-label class="form-label">Username *</ion-label>
+                        <ion-label class="form-label">Username* :</ion-label>
                         <ion-item round>
                             <ion-input name="username" formControlName="username"></ion-input>
                         </ion-item>
