--- a/src/components/access-role-modal/access-role-modal.html
+++ b/src/components/access-role-modal/access-role-modal.html
@@ -17,7 +17,7 @@
             <ion-grid>
                 <ion-row>
                     <ion-col col-5 col-sm-5 col-md-5>
-                        <ion-label class="form-label">Access Role</ion-label>
+                        <ion-label class="form-label">Access Role :</ion-label>
                         <ion-item clean>
                             <ion-select class="options" name="accessRole" formControlName="accessRole">
                                 <ion-option *ngFor="let accessRole of accessRoles; let i = index" [value]="i + 1">{{ accessRole }}</ion-option>
@@ -25,7 +25,7 @@
                         </ion-item>
                     </ion-col>
                     <ion-col col-6 col-sm-6 col-md-6>
-                        <ion-label class="form-label">Expiry Date</ion-label>
+                        <ion-label class="form-label">Expiry Date :</ion-label>
                         <ion-item clean>
                             <ion-datetime name="roleExpiryDate" formControlName="roleExpiryDate" [min]="getMinDate()">
                             </ion-datetime>
