--- a/src/components/contact-modal/contact-modal.html
+++ b/src/components/contact-modal/contact-modal.html
@@ -1,43 +1,43 @@
 <ion-header>
-	<ion-toolbar color="secondary">
-		<ion-buttons start>
-			<button ion-button icon-only navPop><ion-icon name="close"></ion-icon></button>
-		</ion-buttons>
-		<ion-title>
-			{{header}}
-		</ion-title>
-		<ion-buttons end>
-			<button ion-button icon-only (click)="save()"><ion-icon name="checkmark"></ion-icon></button>
-		</ion-buttons>
-	</ion-toolbar>
+    <ion-toolbar color="secondary">
+        <ion-buttons start>
+            <button ion-button icon-only navPop><ion-icon name="close"></ion-icon></button>
+        </ion-buttons>
+        <ion-title>
+            {{header}}
+        </ion-title>
+        <ion-buttons end>
+            <button ion-button icon-only (click)="save()"><ion-icon name="checkmark"></ion-icon></button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 <ion-content #Content padding>
-	<form #form="ngForm" (ngSubmit)="save()" [formGroup]="contactForm">
-		<ion-grid>
-			<ion-row>
-				<ion-col col-12 col-sm-12 col-md-12>
-					  <ion-label class="form-label">Contact Type*</ion-label>
-                        <ion-item clean>
-                            <ion-select class="options" name="contactType" formControlName="contactType">
-                                    <ion-option *ngFor="let type of contactTypeList;let idx = index" [value]="idx">{{ type }}</ion-option>
-                                </ion-select>
-                        </ion-item>
-                        <div class="error-message" *ngIf="errors.contactType">
-                            {{ errors.contactType }}
-                        </div>
+    <form #form="ngForm" (ngSubmit)="save()" [formGroup]="contactForm">
+        <ion-grid>
+            <ion-row>
+                <ion-col col-12 col-sm-12 col-md-12>
+                    <ion-label class="form-label">Contact Type* :</ion-label>
+                    <ion-item clean>
+                        <ion-select class="options" name="contactType" formControlName="contactType">
+                            <ion-option *ngFor="let type of contactTypeList;let idx = index" [value]="idx">{{ type }}</ion-option>
+                        </ion-select>
+                    </ion-item>
+                    <div class="error-message" *ngIf="errors.contactType">
+                        {{ errors.contactType }}
+                    </div>
                 </ion-col>
             </ion-row>
             <ion-row>
-				<ion-col col-12 col-sm-12 col-md-12>
-					  <ion-label class="form-label">Contact Detail*</ion-label>
-                        <ion-item round>
-                             <ion-input type="tel" name="contactDetail" formControlName="contactDetail"></ion-input>
-                        </ion-item>
-                        <div class="error-message" *ngIf="errors.contactDetail">
-                            {{ errors.contactDetail }}
-                        </div>
+                <ion-col col-12 col-sm-12 col-md-12>
+                    <ion-label class="form-label">Contact Detail* :</ion-label>
+                    <ion-item round>
+                        <ion-input type="tel" name="contactDetail" formControlName="contactDetail"></ion-input>
+                    </ion-item>
+                    <div class="error-message" *ngIf="errors.contactDetail">
+                        {{ errors.contactDetail }}
+                    </div>
                 </ion-col>
             </ion-row>
         </ion-grid>
-	</form>
+    </form>
 </ion-content>
