--- a/src/components/patient-form/patient-form.html
+++ b/src/components/patient-form/patient-form.html
@@ -3,7 +3,7 @@
         <ion-grid>
             <ion-row>
                 <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label">Last Name *</ion-label>
+                    <ion-label class="form-label">Last Name* :</ion-label>
                     <ion-item round>
                         <ion-input name="lastName" formControlName="lastName"></ion-input>
                     </ion-item>
@@ -12,7 +12,7 @@
                     </div>
                 </ion-col>
                 <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label">First Name *</ion-label>
+                    <ion-label class="form-label">First Name* :</ion-label>
                     <ion-item round>
                         <ion-input name="firstName" formControlName="firstName"></ion-input>
                     </ion-item>
@@ -21,7 +21,7 @@
                     </div>
                 </ion-col>
                 <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label">Middle Name</ion-label>
+                    <ion-label class="form-label">Middle Name :</ion-label>
                     <ion-item round>
                         <ion-input name="middleName" formControlName="middleName"></ion-input>
                     </ion-item>
@@ -29,7 +29,7 @@
             </ion-row>
             <ion-row>
                 <ion-col col-12 col-sm-12 col-md-3>
-                    <ion-label class="form-label">Legal Status *</ion-label>
+                    <ion-label class="form-label">Legal Status* :</ion-label>
                     <ion-item clean>
                         <ion-select class="options" name="legalStatus" formControlName="legalStatus">
                             <ion-option *ngFor="let ls of legalStatusList; let i = index" [value]="i">{{ ls }}</ion-option>
@@ -40,7 +40,7 @@
                     </div>
                 </ion-col>
                 <ion-col col-12 col-sm-12 col-md-3>
-                    <ion-label class="form-label">Gender *</ion-label>
+                    <ion-label class="form-label">Gender* :</ion-label>
                     <ion-list radio-group name="gender" formControlName="gender">
                         <ion-item *ngFor="let gender of genderList; let i = index">
                             <ion-radio color="primary" [value]="i"></ion-radio>
@@ -52,7 +52,7 @@
                     </div>
                 </ion-col>
                 <ion-col col-3 col-sm-3 col-md-1>
-                    <ion-label class="form-label">Age *</ion-label>
+                    <ion-label class="form-label">Age* :</ion-label>
                     <ion-item round>
                         <ion-input type="number" name="age" formControlName="age"></ion-input>
                     </ion-item>
@@ -61,7 +61,7 @@
                     </div>
                 </ion-col>
                 <ion-col col-9 col-sm-9 col-md-3>
-                    <ion-label class="form-label">Birth Date *</ion-label>
+                    <ion-label class="form-label">Birth Date* :</ion-label>
                     <ion-item clean>
                         <ion-datetime displayFormat="MMMM DD, YYYY" formControlName="birthDate"></ion-datetime>
                         <div class="error-message" *ngIf="patientForm.get('birthDate')?.dirty &&  patientForm.get('birthDate').invalid">
@@ -72,7 +72,7 @@
             </ion-row>
             <ion-row class="contact-control">
                 <ion-col col-6 col-sm-5 col-md-4>
-                    <ion-label class="form-label">Contact *</ion-label>
+                    <ion-label class="form-label">Contact* :</ion-label>
                 </ion-col>
                 <ion-col col-6 col-sm-5 col-md-4>
                     <ion-label class="form-link" (click)="addContact($event)" color="accent-dark">+ add Contact</ion-label>
@@ -106,7 +106,7 @@
             </ion-row>
             <ion-row>
                 <ion-col col-12 col-sm-12 col-md-6>
-                    <ion-label class="form-label">Email *</ion-label>
+                    <ion-label class="form-label">Email* :</ion-label>
                     <ion-item round>
                         <ion-input type="email" name="email" formControlName="email"></ion-input>
                     </ion-item>
@@ -117,7 +117,7 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <ion-label class="form-label">Address *</ion-label>
+                    <ion-label class="form-label">Address* :</ion-label>
                     <ion-item round>
                         <ion-textarea name="address" formControlName="address"></ion-textarea>
                     </ion-item>
@@ -128,7 +128,7 @@
             </ion-row>
             <ion-row>
                 <ion-col col-12 col-sm-12 col-md-3>
-                    <ion-label class="form-label">Registration Date</ion-label>
+                    <ion-label class="form-label">Registration Date :</ion-label>
                     <ion-item clean>
                         <ion-datetime displayFormat="MMMM DD, YYYY" formControlName="registrationDate"></ion-datetime>
                         <div class="error-message" *ngIf="patientForm.get('registrationDate')?.dirty &&  patientForm.get('registrationDate').invalid">
