--- a/src/components/profile-form/profile-form.html
+++ b/src/components/profile-form/profile-form.html
@@ -4,7 +4,7 @@
             <ion-grid>
                 <ion-row>
                     <ion-col col-12 col-sm-12 col-md-4>
-                        <ion-label class="form-label">Last Name *</ion-label>
+                        <ion-label class="form-label">Last Name* :</ion-label>
                         <ion-item round>
                             <ion-input name="lastName" formControlName="lastName"></ion-input>
                         </ion-item>
@@ -13,7 +13,7 @@
                         </div>
                     </ion-col>
                     <ion-col col-12 col-sm-12 col-md-4>
-                        <ion-label class="form-label">First Name *</ion-label>
+                        <ion-label class="form-label">First Name* :</ion-label>
                         <ion-item round>
                             <ion-input name="firstName" formControlName="firstName"></ion-input>
                         </ion-item>
@@ -22,7 +22,7 @@
                         </div>
                     </ion-col>
                     <ion-col col-12 col-sm-12 col-md-4>
-                        <ion-label class="form-label">Middle Name</ion-label>
+                        <ion-label class="form-label">Middle Name :</ion-label>
                         <ion-item round>
                             <ion-input name="middleName" formControlName="middleName"></ion-input>
                         </ion-item>
@@ -31,7 +31,7 @@
                 <div [hidden]="formType !== 'D'">
                     <ion-row>
                         <ion-col col-12 col-sm-6 col-md-6>
-                            <ion-label class="form-label">PRC License *</ion-label>
+                            <ion-label class="form-label">PRC License* :</ion-label>
                             <ion-item round>
                                 <ion-input type="number" name="prc" formControlName="prc"></ion-input>
                             </ion-item>
@@ -40,7 +40,7 @@
                             </div>
                         </ion-col>
                         <ion-col col-12 col-sm-6 col-md-6>
-                            <ion-label class="form-label">PTR</ion-label>
+                            <ion-label class="form-label">PTR :</ion-label>
                             <ion-item round>
                                 <ion-input type="number" name="ptr" formControlName="ptr"></ion-input>
                             </ion-item>
@@ -48,7 +48,7 @@
                     </ion-row>
                     <ion-row>
                         <ion-col col-12 col-sm-6 col-md-6>
-                            <ion-label class="form-label">Medical Arts *</ion-label>
+                            <ion-label class="form-label">Medical Arts* :</ion-label>
                             <ion-item clean>
                                 <ion-select class="options" name="medicalArt" formControlName="medicalArt">
                                     <ion-option *ngFor="let type of medicalArts; let i = index" [value]="i">{{ type }}</ion-option>
@@ -59,7 +59,7 @@
                             </div>
                         </ion-col>
                         <ion-col col-12 col-sm-6 col-md-6>
-                            <ion-label class="form-label">Specialization *</ion-label>
+                            <ion-label class="form-label">Specialization* :</ion-label>
                             <ion-item round>
                                 <ion-input name="specialization" formControlName="specialization"></ion-input>
                             </ion-item>
@@ -71,7 +71,7 @@
                 </div>
                 <ion-row>
                     <ion-col col-12 col-sm-12 col-md-6>
-                        <ion-label class="form-label">Email *</ion-label>
+                        <ion-label class="form-label">Email* :</ion-label>
                         <ion-item round>
                             <ion-input type="email" name="email" formControlName="email"></ion-input>
                         </ion-item>
@@ -82,7 +82,7 @@
                 </ion-row>
                 <ion-row class="contact-control">
                     <ion-col col-6 col-sm-5 col-md-4>
-                        <ion-label class="form-label">Contact *</ion-label>
+                        <ion-label class="form-label">Contact* :</ion-label>
                     </ion-col>
                     <ion-col col-6 col-sm-5 col-md-4>
                         <ion-label class="form-link" (click)="addContact($event)" color="accent-dark">+ add Contact</ion-label>
@@ -116,7 +116,7 @@
                 </ion-row>
                 <ion-row>
                     <ion-col col-12 col-sm-6 col-md-6>
-                        <ion-label class="form-label">Gender *</ion-label>
+                        <ion-label class="form-label">Gender* :</ion-label>
                         <ion-list radio-group name="gender" formControlName="gender">
                             <ion-item *ngFor="let gender of genderList; let i = index">
                                 <ion-radio color="primary" [value]="i"></ion-radio>
@@ -128,7 +128,7 @@
                         </div>
                     </ion-col>
                     <ion-col col-12 col-sm-6 col-md-3>
-                        <ion-label class="form-label">Birth Date *</ion-label>
+                        <ion-label class="form-label">Birth Date* :</ion-label>
                         <ion-datetime displayFormat="MMMM DD, YYYY" formControlName="birthDate"></ion-datetime>
                         <div class="error-message" *ngIf="birthDate.dirty &&  birthDate.invalid">
                             {{ errors.birthDate }}
@@ -137,7 +137,7 @@
                 </ion-row>
                 <ion-row>
                     <ion-col>
-                        <ion-label class="form-label">Address</ion-label>
+                        <ion-label class="form-label">Address :</ion-label>
                         <ion-item round>
                             <ion-textarea name="address" formControlName="address"></ion-textarea>
                         </ion-item>
