--- a/src/components/schedule-modal/schedule-modal.html
+++ b/src/components/schedule-modal/schedule-modal.html
@@ -16,7 +16,7 @@
         <ion-grid>
             <ion-row>
                 <ion-col col-4 col-sm-4 col-md-4>
-                    <ion-label class="form-label">Day of Week *</ion-label>
+                    <ion-label class="form-label">Day of Week* :</ion-label>
                     <ion-item clean>
                         <ion-select class="options" name="day" formControlName="day">
                             <ion-option *ngFor="let day of days; let i = index" [value]="i">{{ day }}</ion-option>
@@ -27,7 +27,7 @@
                     </div>
                 </ion-col>
                 <ion-col col-4 col-sm-4 col-md-4>
-                    <ion-label class="form-label">From *</ion-label>
+                    <ion-label class="form-label">From* :</ion-label>
                     <ion-item clean>
                         <ion-datetime displayFormat="hh:mm a" pickerFormat="hh:mm a" name="from" formControlName="from"></ion-datetime>
                     </ion-item>
@@ -36,7 +36,7 @@
                     </div>
                 </ion-col>
                 <ion-col col-4 col-sm-4 col-md-4>
-                    <ion-label class="form-label">To *</ion-label>
+                    <ion-label class="form-label">To* :</ion-label>
                     <ion-item clean>
                         <ion-datetime displayFormat="hh:mm a" pickerFormat="hh:mm a" name="to" formControlName="to"></ion-datetime>
                     </ion-item>
