change clinic manager no clincis spiel. rearranged clinic schedule form fields

--- a/src/components/schedule-modal/schedule-modal.html
+++ b/src/components/schedule-modal/schedule-modal.html
@@ -15,7 +15,7 @@
     <form [formGroup]="scheduleForm" #form="ngForm" (ngSubmit)="save()">
         <ion-grid>
             <ion-row>
-                <ion-col col-4 col-sm-4 col-md-4>
+                <ion-col col-6 col-sm-6 col-md-4>
                     <ion-label class="form-label">Day of Week* :</ion-label>
                     <ion-item clean>
                         <ion-select class="options" name="day" formControlName="day">
@@ -26,7 +26,9 @@
                         {{ errors.day }}
                     </div>
                 </ion-col>
-                <ion-col col-4 col-sm-4 col-md-4>
+            </ion-row>
+            <ion-row>
+                <ion-col col-4 col-sm-4 col-md-3>
                     <ion-label class="form-label">From* :</ion-label>
                     <ion-item clean>
                         <ion-datetime displayFormat="hh:mm a" pickerFormat="hh:mm a" name="from" formControlName="from"></ion-datetime>
@@ -35,7 +37,7 @@
                         {{ errors.from }}
                     </div>
                 </ion-col>
-                <ion-col col-4 col-sm-4 col-md-4>
+                <ion-col col-4 col-sm-4 col-md-3>
                     <ion-label class="form-label">To* :</ion-label>
                     <ion-item clean>
                         <ion-datetime displayFormat="hh:mm a" pickerFormat="hh:mm a" name="to" formControlName="to"></ion-datetime>
