add viewing of patient in patient history

--- a/src/pages/schedule-history/schedule-history.scss
+++ b/src/pages/schedule-history/schedule-history.scss
@@ -4,6 +4,7 @@ schedule-history {
         button,
         ion-datetime {
             display: table-cell;
+            vertical-align: middle;
         }
     }
     .time-container {
