image service with s3 sync

--- a/src/components/upload-photo/upload-photo.html
+++ b/src/components/upload-photo/upload-photo.html
@@ -18,7 +18,7 @@
 			<div text-center *ngIf="isLoading">
 				<ion-spinner name="crescent"></ion-spinner>
 			</div>
-			<img [src]="'data:image/jpeg;base64,' + image" *ngIf="image">
+			<img [src]="image" *ngIf="image">
 		</div>
 		<button ion-button round large color="accent"
 		(click)="submit()" [disabled]="!image">Done</button>
