--- a/src/pages/clinic-manager/clinic-manager.scss
+++ b/src/pages/clinic-manager/clinic-manager.scss
@@ -19,4 +19,9 @@ clinic-manager-page {
     .clinic-container{
         padding: 5px;
     }
+
+    ion-icon {
+        font-size: 28px;
+        margin-right: 30px;
+    }
 }
