reminder css update

--- a/src/components/reminder/reminder.html
+++ b/src/components/reminder/reminder.html
@@ -1,6 +1,7 @@
 <ion-card>
 	<ion-card-header>
 		<h2>Reminder</h2>
+
 	</ion-card-header>
 	<ion-card-content>
 		<ion-list no-lines>
@@ -10,4 +11,7 @@
 			</ion-item>
 		</ion-list>
 	</ion-card-content>
+	<div text-right>
+		<button ion-button clear small color="accent">+Add Reminder</button>
+	</div>
 </ion-card>
