added. patient owner subject. fixed clinic manager icons

--- a/src/pages/clinic-manager/clinic-manager.scss
+++ b/src/pages/clinic-manager/clinic-manager.scss
@@ -20,7 +20,7 @@ clinic-manager-page {
         padding: 5px;
     }
 
-    ion-icon {
+    ion-icon.action-icons {
         font-size: 28px;
         margin-right: 30px;
     }
