--- a/src/components/add-queue-form-modal/add-queue-form-modal.html
+++ b/src/components/add-queue-form-modal/add-queue-form-modal.html
@@ -12,71 +12,63 @@
 	</ion-toolbar>
 </ion-header>
 <ion-content padding>
+	<h2>{{lastName}}, {{firstName}} {{middleName}}</h2>
 	<form [formGroup]="queueForm" #form="ngForm" (ngSubmit)="save()">
+		<ion-label>Queued for:</ion-label>
 		<ion-grid>
-			<!-- <ion-row>
-				<ion-col col-12 col-sm-6 col-md-6>
-					<div >
-						<ion-label class="form-label">Last Name* :</ion-label>
-						<ion-item round>
-							<ion-input name="lastName" formControlName="lastName"></ion-input>
+			<ion-row>
+				<ion-col col-12 col-sm-12 col-md-12>
+					<ion-list no-lines>
+						<ion-item>
+							<ion-label>Assistant</ion-label>
+							<ion-checkbox color="accent" checked="true"></ion-checkbox>
 						</ion-item>
-						<div class="error-message" *ngIf="lastName.invalid">
-							{{ errors.lastName }}
-						</div>
-					</div>
-				</ion-col>
-				<ion-col col-12 col-sm-6 col-md-6>
-					<div >
-						<ion-label class="form-label">First Name* : </ion-label>
-						<ion-item round>
-							<ion-input name="firstName" formControlName="firstName"></ion-input>
+						<ion-item>
+							<ion-label>Doctor</ion-label>
+							<ion-checkbox color="accent" checked="true"></ion-checkbox>
 						</ion-item>
-						<div class="error-message" *ngIf="firstName.invalid">
-							{{ errors.firstName }}
-						</div>
-					</div>
+					</ion-list>
 				</ion-col>
-				<ion-col col-12 col-sm-6 col-md-6>
-					<div >
-						<ion-label class="form-label">Middle Name : </ion-label>
-						<ion-item round>
-							<ion-input name="middleName" formControlName="middleName"></ion-input>
-						</ion-item>
-					</div>
+				<ion-col  col-12 col-sm-12 col-md-12>
+					<ion-item>
+						<ion-label>Doctor</ion-label>
+						<ion-select placeholder="Choose your Doctor">
+							<ion-option>Any</ion-option>
+						</ion-select>
+					</ion-item>
 				</ion-col>
-			</ion-row> -->
-			<ion-card>
-				<ion-card-header>
-					{{lastName}}, {{firstName}} {{middleName}}
-				</ion-card-header>
-			</ion-card>
+			</ion-row>	
+		</ion-grid>
+		<ion-label>Queued on:</ion-label>
+		<ion-grid>
 			<ion-row>
 				<ion-col col-12 col-sm-12 col-md-12>
 					<ion-list radio-group formControlName="isServeNow">
 						<ion-item>
-							<ion-label>Queue Now</ion-label>
-							<ion-radio class="form-control" [value]="true" checked></ion-radio>
+							<ion-label>Now</ion-label>
+							<ion-radio class="form-control" [value]="true" checked color="accent"></ion-radio>
 						</ion-item>
 						<ion-item>
 							<ion-label>Scheduled</ion-label>
-							<ion-radio class="form-control" [value]="false"></ion-radio>
+							<ion-radio class="form-control" [value]="false"
+							 color="accent"></ion-radio>
 						</ion-item>
 					</ion-list>
 				</ion-col>
 			</ion-row>
-			<ion-row>
+
+			<ion-row class="schedule-form">
 				<ion-col col-12 col-sm-6 col-md-6>
 					<div>
-						<ion-label>Date :</ion-label>
-						<ion-datetime displayFormat="MMMM DD YYYY" formControlName="schedule" [disabled]="isServeNow.value" [min]="getMinDate()">
+						<!-- <ion-label>Date :</ion-label> -->
+						<ion-datetime displayFormat="MMMM DD YYYY" formControlName="schedule" [disabled]="isServeNow.value" [min]="getMinDate()" placeholder="Date">
 						</ion-datetime>
 					</div>
 				</ion-col>
 				<ion-col col-12 col-sm-6 col-md-6>
 					<div>
-						<ion-label>Time :</ion-label>
-						<ion-datetime pickerFormat="hh:mm A" formControlName="timeSlot" [disabled]="isServeNow.value">
+						<!-- <ion-label>Time :</ion-label> -->
+						<ion-datetime pickerFormat="hh:mm A" formControlName="timeSlot" [disabled]="isServeNow.value" placeholder="Time">
 						</ion-datetime>
 					</div>
 				</ion-col>
