--- a/src/components/patient-count/patient-count.html
+++ b/src/components/patient-count/patient-count.html
@@ -1,8 +1,8 @@
 <ion-card>
 	<ion-card-header>
 		<ion-label no-padding no-margin>
-		<ion-icon name = "list-box"></ion-icon>
-		Reminder
+		<ion-icon name = "happy"></ion-icon>
+		Patient
 		</ion-label>
 	</ion-card-header>
 	<ion-card-content>
