--- a/src/components/patient-form/patient-form.html
+++ b/src/components/patient-form/patient-form.html
@@ -105,7 +105,7 @@
         </ion-row>
         <ion-row>
             <ion-col col-12 col-sm-12 col-md-6>
-                <ion-label class="form-label">Email* :</ion-label>
+                <ion-label class="form-label">Email :</ion-label>
                 <ion-item round>
                     <ion-input type="email" name="email" formControlName="email"></ion-input>
                 </ion-item>
