--- a/src/components/search-user-modal/search-user-modal.html
+++ b/src/components/search-user-modal/search-user-modal.html
@@ -26,7 +26,7 @@
             </ion-row>
             <ion-row>
                 <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label">Username :<span *ngIf="selectedCriteriaType === 0">*</span></ion-label>
+                    <ion-label class="form-label">Username<span *ngIf="selectedCriteriaType === 0">*</span> :</ion-label>
                     <ion-item round>
                         <ion-input name="username" formControlName="username" [disabled]="selectedCriteriaType !== 0"></ion-input>
                     </ion-item>
@@ -35,7 +35,7 @@
                     </div>
                 </ion-col>
                 <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label">Last Name :<span *ngIf="selectedCriteriaType === 1">*</span></ion-label>
+                    <ion-label class="form-label">Last Name<span *ngIf="selectedCriteriaType === 1">*</span> :</ion-label>
                     <ion-item round>
                         <ion-input name="lastname" formControlName="lastname" [disabled]="selectedCriteriaType !== 1"></ion-input>
                     </ion-item>
@@ -44,7 +44,7 @@
                     </div>
                 </ion-col>
                 <ion-col col-12 col-sm-12 col-md-4>
-                    <ion-label class="form-label">First Name :<span *ngIf="selectedCriteriaType === 2">*</span></ion-label>
+                    <ion-label class="form-label">First Name<span *ngIf="selectedCriteriaType === 2">*</span> :</ion-label>
                     <ion-item round>
                         <ion-input name="firstname" formControlName="firstname" [disabled]="selectedCriteriaType !== 2"></ion-input>
                     </ion-item>
