integrate queuedFor api

--- a/src/components/add-queue-form-modal/add-queue-form-modal.scss
+++ b/src/components/add-queue-form-modal/add-queue-form-modal.scss
@@ -15,7 +15,7 @@ add-queue-form-modal{
 		border-bottom: 0px !important;
 	}
 
-	.schedule-form{
+	.sub-item{
 		padding-left: 16px;
 		ion-col{
 			margin-bottom: 16px;
