--- a/src/components/add-queue-form-modal/add-queue-form-modal.html
+++ b/src/components/add-queue-form-modal/add-queue-form-modal.html
@@ -38,8 +38,8 @@
 					</ion-item>
 				</ion-col>
 			</ion-row>	
-			<ion-row>
-				<ion-col>
+			<ion-row class="sub-item">
+				<ion-col class="invalid">
 					{{errors.for}}
 				</ion-col>
 			</ion-row>
@@ -62,7 +62,7 @@
 				</ion-col>
 			</ion-row>
 
-			<ion-row class="schedule-form">
+			<ion-row class="sub-item">
 				<ion-col col-12 col-sm-6 col-md-6>
 					<div>
 						<!-- <ion-label>Date :</ion-label> -->
