--- a/src/components/queue-widget/queue-widget.html
+++ b/src/components/queue-widget/queue-widget.html
@@ -6,70 +6,74 @@
 		</ion-label>
 	</ion-card-header>
 	<ion-card-content>
-		<ion-grid>
-			<ion-row>
-				<ion-col col-6 col-sm-6 col-md-6>
-					<canvas baseChart
-		              [data]="doughnutChartData"
-		              [labels]="doughnutChartLabels"
-		              [chartType]="doughnutChartType"
-		              [legend]="false"
-		              [options]="doughnutChartOptions"
-		              [colors]="doughnutChartColors"></canvas>
-		            <div class="total">
-		            	<div class="digit">100</div>
-		            	<div class="label">TOTAL</div>
-		            </div>
-				</ion-col>
-				<ion-col col-6 col-sm-6 col-md-6>
-					<div class="legend">
-						<div class="done">
-							<div class="value">
-								45
+		<content-with-loading [isLoading]="!queueTotal">
+			<ion-grid>
+				<ion-row>
+					<ion-col col-6 col-sm-6 col-md-6>
+						<canvas baseChart 
+			              [data]="queueBreakdown"
+			              [labels]="doughnutChartLabels"
+			              chartType="doughnut"
+			              [legend]="false"
+			              [options]="doughnutChartOptions"
+			              [colors]="doughnutChartColors"></canvas>
+			            <div class="total">
+			            	<div class="digit">{{queueTotal}}</div>
+			            	<div class="label">TOTAL</div>
+			            </div>
+					</ion-col>
+					<ion-col col-6 col-sm-6 col-md-6>
+						<div class="legend">
+							<div class="done">
+								<div class="value">
+									{{queueBreakdown? queueBreakdown[0] : 0}}
+								</div>
+								<div class="dot">
+									<ion-icon name="radio-button-on" color="done"></ion-icon>
+								</div>
+								<div class="description">
+									DONE
+								</div>
 							</div>
-							<div class="dot">
-								<ion-icon name="radio-button-on" color="done"></ion-icon>
+							<div class="serving">
+								<div class="value">
+									{{queueBreakdown? queueBreakdown[1] : 0}}
+								</div>
+								<div class="dot">
+									<ion-icon name="radio-button-on" color="serving"></ion-icon>
+								</div>
+								<div class="description">
+									SERVING
+								</div>
 							</div>
-							<div class="description">
-								DONE
+							<div class="queued">
+								<div class="value">
+									{{queueBreakdown? queueBreakdown[2] : 0}}
+									<!-- {{queueBreakdown[2]}} -->
+								</div>
+								<div class="dot">
+									<ion-icon name="radio-button-on" color="queued"></ion-icon>
+								</div>
+								<div class="description">
+									QUEUED
+								</div>
+							</div>
+							<div class="away">
+								<div class="value">
+									{{queueBreakdown? queueBreakdown[3] : 0}}
+									<!-- {{queueBreakdown[3]}}	 -->
+								</div>
+								<div class="dot">
+									<ion-icon name="radio-button-on" color="away"></ion-icon>
+								</div>
+								<div class="description">
+									AWAY
+								</div>
 							</div>
 						</div>
-						<div class="serving">
-							<div class="value">
-								5
-							</div>
-							<div class="dot">
-								<ion-icon name="radio-button-on" color="serving"></ion-icon>
-							</div>
-							<div class="description">
-								SERVING
-							</div>
-						</div>
-						<div class="queued">
-							<div class="value">
-								25
-							</div>
-							<div class="dot">
-								<ion-icon name="radio-button-on" color="queued"></ion-icon>
-							</div>
-							<div class="description">
-								QUEUED
-							</div>
-						</div>
-						<div class="away">
-							<div class="value">
-								25	
-							</div>
-							<div class="dot">
-								<ion-icon name="radio-button-on" color="away"></ion-icon>
-							</div>
-							<div class="description">
-								AWAY
-							</div>
-						</div>
-					</div>
-				</ion-col>
-			</ion-row>
-		</ion-grid>
+					</ion-col>
+				</ion-row>
+			</ion-grid>
+		</content-with-loading>
 	</ion-card-content>
 </ion-card>
