--- a/src/components/consultation-segment/consultation-segment.html
+++ b/src/components/consultation-segment/consultation-segment.html
@@ -12,16 +12,10 @@
     </div>
 
     <div *ngSwitchCase="'segment2'">
-        <ion-list>
-            <ion-item class="allergy">
-            </ion-item>
-        </ion-list>
+        <patient-condition></patient-condition>
     </div>
 
     <div *ngSwitchCase="'segment3'">
-        <ion-list>
-            <ion-item class="allergy">
-            </ion-item>
-        </ion-list>
+        <patient-medication></patient-medication>
     </div>
 </div>
