--- a/src/components/medication-modal/medication-modal.html
+++ b/src/components/medication-modal/medication-modal.html
@@ -4,7 +4,7 @@
             <button ion-button icon-only navPop><ion-icon name="close"></ion-icon></button>
         </ion-buttons>
         <ion-title>
-            Add Allergy
+            Add Medication
         </ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="save()"><ion-icon name="checkmark"></ion-icon></button>
@@ -12,7 +12,7 @@
     </ion-toolbar>
 </ion-header>
 <ion-content #Content padding>
-    <form #form="ngForm" (ngSubmit)="save()" [formGroup]="allergyForm">
+    <form #form="ngForm" (ngSubmit)="save()" [formGroup]="medicationForm">
         <ion-grid>
             <ion-row>
                 <ion-col col-12 col-sm-12 col-md-12>
@@ -22,6 +22,18 @@
                     </ion-item>
                     <div class="error-message" *ngIf="errors.description">
                         {{ errors.description }}
+                    </div>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col col-12 col-sm-12 col-md-12>
+                    <ion-label class="form-label">Start Date* :</ion-label>
+                    <ion-item clean>
+                        <ion-datetime displayFormat="MMMM DD, YYYY" formControlName="startDate"></ion-datetime>
+
+                    </ion-item>
+                    <div class="error-message" *ngIf="medicationForm.get('startDate')?.dirty &&  medicationForm.get('startDate').invalid">
+                        {{ errors.startDate }}
                     </div>
                 </ion-col>
             </ion-row>
